<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAns4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="105dp"
        android:background="#FFEB3B"
        android:onClick="chooseAns"
        android:tag="3"
        android:text="@string/ans4"
        android:textColor="@android:color/primary_text_light"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAns3"
        app:layout_constraintTop_toBottomOf="@+id/btnAns2" />

    <Button
        android:id="@+id/btnAns3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:background="#FF0000"
        android:onClick="chooseAns"
        android:tag="2"
        android:text="@string/ans3"
        android:textColor="@android:color/primary_text_light"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/btnAns4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAns1" />

    <Button
        android:id="@+id/btnAns2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="105dp"
        android:background="#556FFF"
        android:onClick="chooseAns"
        android:tag="1"
        android:text="@string/ans2"
        android:textColor="@android:color/primary_text_light"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnAns4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAns1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAns1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="220dp"
        android:background="#009688"
        android:onClick="chooseAns"
        android:tag="0"
        android:text="@string/ans1"
        android:textColor="@android:color/primary_text_light"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnAns3"
        app:layout_constraintEnd_toStartOf="@+id/btnAns2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="64dp"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:background="#03A9F4"
        android:text="@string/stringTimer"
        android:textAlignment="center"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMath"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="10dp"
        android:text="@string/math"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnAns2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textScore"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="#03A9F4"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTimer" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="start"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHome"
        app:layout_constraintVertical_bias="0.445" />

    <TextView
        android:id="@+id/textDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="8dp"
        android:text="@string/done"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAns4"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btnAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="78dp"
        android:background="?attr/colorButtonNormal"
        android:onClick="playAgain"
        android:text="@string/tryAgain"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDone"
        app:layout_constraintVertical_bias="0.4"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="256dp"
        android:text="@string/home"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>